# Dimensionality-Reduction

./: .gitignore  README.adoc  clean_latex_stuff.sh  main.tex  pyproject.toml
check_spelling/: _check_document.sh  dict.txt
notebooks/: Covariance_Example.py  SVD-Compression_Example.ipynb  SVD-Eigenfaces.ipynb  SVD-Meaningful_PCs-Rotation_Pitfall.ipynb  SVD-Meaningful_PCs.ipynb  SVD-UnitMismatch.ipynb  SVD-Visualization.ipynb  SVD_Compression_Example.ipynb  Swiss_Roll.ipynb  const.py
reference/: glossary.tex  scibib.bib
report/: clean_latex_stuff.sh  main.tex
report/check_spelling/: dict.txt
report/reference/: acronym.tex  glossary.tex  scibib.bib
report/source/: 0001-preamble_settings.tex  0002-code_style.tex  0020-title.tex  0021-abstract.tex  0022-table_of_content.tex  0031-colors.tex  0032-macros.tex  0033-links.tex  020-title.tex  022-table_of_content.tex  1000-introduction.tex  200-theory.tex  2000-theory.tex  2100-necessity.tex  2200-maths.tex  2200-necessity.tex  2300-curse.tex  2300-maths.tex  2301-geodesic_distance.tex  2400-linear_vs_nonlinear.tex  2401-linear_problem.tex  2402-non_linear_problem.tex  2500-projection_vs_manifold.tex  300-techniques.tex  3000-techniques.tex  3001-linear_problem.tex  3010-linear_vs_nonlinear.tex  3020-projection_vs_manifold.tex  3100-intro.tex  3100-linear_techniques.tex  3100-pca.tex  3110-pca.tex  3120-lda.tex  (+30 more)
source/: 000-conditions.tex  001-preamble_settings.tex  008-headers_and_footers.tex  020-title.tex  100-introduction.tex  200-theory.tex  300-techniques.tex  301-linear_problem.tex  302-non_linear_problem.tex
(+2 files in other folders)
