[tool.poetry]
name = "dimensionality_reduction"
version = "0.1.0"
description = ""
authors = ["Cédric Uden <cedric@uden.de>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.0"
jupyter = "^1.0.0"
pandas = "^1.3.4"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
